force-app/shared/config/objects/Picklist_Mapping__mdt/Picklist_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Dependent picklists</description>
    <label>Picklist Mapping</label>
    <pluralLabel>Picklist Mappings</pluralLabel>
</CustomObject>