force-app/shared/config/objects/Picklist_Mapping__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>