force-app/shared/config/objects/Picklist_Mapping__mdt/fields/Picklist_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Picklist_API_Name__c</fullName>
    <label>Picklist API Name</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>