force-app/shared/config/objects/Picklist_Mapping__mdt/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>99</length>
    <type>Text</type>
</CustomField>